[tool.poetry]
name = "sprinkler3-backend"
version = "0.1.0"
description = ""
authors = ["Jon Morgan <morgan.jon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
black = "^24.4.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
